--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ importlib-resources==5.6.0
 ipykernel==6.12.1
 ipython==8.2.0
 ipython-genutils==0.2.0
+ipywidgets==7.7.0
 jedi==0.18.1
 Jinja2==3.1.1
 json5==0.9.6
@@ -38,6 +39,7 @@ jupyter-server==1.16.0
 jupyterlab==3.3.2
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.12.0
+jupyterlab-widgets==1.1.0
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.3
 mistune==0.8.4
@@ -87,4 +89,5 @@ urllib3==1.26.9
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.3.2
+widgetsnbextension==3.6.0
 zipp==3.8.0
