--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ bleach==4.1.0
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
+click==8.1.2
 dataclasses==0.6
 debugpy==1.6.0
 decorator==5.1.1
@@ -21,9 +22,12 @@ entrypoints==0.4
 executing==0.8.3
 faiss-cpu==1.7.2
 fastjsonschema==2.15.3
+filelock==3.6.0
 fire==0.4.0
 fsspec==2022.3.0
+huggingface-hub==0.5.1
 idna==3.3
+importlib-metadata==4.11.3
 importlib-resources==5.6.0
 ipykernel==6.12.1
 ipython==8.2.0
@@ -31,6 +35,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.7.0
 jedi==0.18.1
 Jinja2==3.1.1
+joblib==1.1.0
 json5==0.9.6
 jsonschema==4.4.0
 jupyter-client==7.2.1
@@ -69,8 +74,11 @@ pyparsing==3.0.7
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.1
+PyYAML==6.0
 pyzmq==22.3.0
+regex==2022.3.15
 requests==2.27.1
+sacremoses==0.0.49
 Send2Trash==1.8.0
 sentencepiece==0.1.96
 six==1.16.0
@@ -80,10 +88,12 @@ stack-data==0.2.0
 termcolor==1.1.0
 terminado==0.13.3
 testpath==0.6.0
+tokenizers==0.11.6
 torch==1.11.0
 tornado==6.1
 tqdm==4.64.0
 traitlets==5.1.1
+transformers==4.18.0
 typing_extensions==4.1.1
 urllib3==1.26.9
 wcwidth==0.2.5
